@@ -3,21 +3,80 @@
 
 typedef void *AL_DLDataPtr;
 typedef void (*AL_DLFunPtr) (void);
-
 typedef void *AL_DLHandle;
 
-extern int alDLInit_ (void);
+#ifdef USE_DLOPEN
 
-extern int alDLExit_ (void);
+#include <dlfcn.h>
 
-extern AL_DLHandle alDLOpen_ (const char *file);
+static __inline int alDLInit_ (void) {return 0;}
 
-extern int alDLClose_ (AL_DLHandle handle);
+static __inline int alDLExit_ (void) {return 0;}
 
-extern AL_DLDataPtr alDLDataSym_ (AL_DLHandle handle, const char *name);
+static __inline AL_DLHandle
+alDLOpen_ (const char *file)
+{
+	return dlopen (file, RTLD_LAZY | RTLD_GLOBAL);
+}
 
-extern AL_DLFunPtr alDLFunSym_ (AL_DLHandle handle, const char *name);
+static __inline int
+alDLClose_ (AL_DLHandle handle)
+{
+	return dlclose (handle);
+}
 
-extern const char *alDLError_ (void);
+/* not inlined to have warning only at one place */
+extern AL_DLDataPtr
+alDLDataSym_ (AL_DLHandle handle, const char *name);
+
+/* not inlined to have warning only at one place */
+extern AL_DLFunPtr
+alDLFunSym_ (AL_DLHandle handle, const char *name);
+
+static __inline const char *
+alDLError_ (void)
+{
+	return dlerror ();
+}
+
+#else /* USE_DLOPEN */
+
+extern const char alDLErrorMessage[];
+
+
+static __inline int alDLInit_ (void) {return 1;}
+
+static __inline int alDLExit_ (void) {return 1;}
+
+static __inline AL_DLHandle
+alDLOpen_ (UNUSED (const char *file))
+{
+	return (AL_DLHandle) 0;
+}
+
+static __inline int
+alDLClose_ (UNUSED (AL_DLHandle handle))
+{
+	return 1;
+}
+
+static __inline AL_DLDataPtr
+alDLDataSym_ (UNUSED (AL_DLHandle handle), UNUSED (const char *name))
+{
+	return (AL_DLDataPtr) 0;
+}
+
+static __inline AL_DLFunPtr
+alDLFunSym_ (UNUSED (AL_DLHandle handle), UNUSED (const char *name))
+{
+	return (AL_DLFunPtr) 0;
+}
+
+static __inline const char *
+alDLError_ (void)
+{
+	return alDLErrorMessage;
+}
+#endif /* USE_DLOPEN */
 
 #endif /* not AL_AL_DLOPEN_H_ */
