@@ -13,6 +13,8 @@
 	src/extensions/al_ext_vorbis.c: add and use internal _alGetProcAddress
 	to silence warnings
 
+	* src/al_dlopen.c, src/al_dlopen.h: move one-liners into header
+
 2006-10-27  Sven Panne  <sven.panne@aedion.de>
 
 	* src/alc/alc_device.c: Fixed a race condition in alcCloseDevice
